feature/review position of layout and funcionality

--- a/audaces-test/src/app/home/principal/principal.component.scss
+++ b/audaces-test/src/app/home/principal/principal.component.scss
@@ -1,18 +1,27 @@
 .num-class{
-    width: 145px;
+    width: 130px;
 }
 .flex {
 	display: flex;
     flex-wrap: wrap;
 }
+.flex-end{
+    display: flex;
+    justify-content: flex-end;
+  }
 .item {
 	margin: 5px;
-    width: 140px;
+    width: 130px;
 	text-align: center;
 	font-size: 14px;
     p{
         margin-top: 20px;
     }
+}
+.item-add{
+    width: 80px;
+    text-align: center;
+    font-size: 14px;
 }
 .title{
     width:100px
