--- a/audaces-test/src/app/home/principal/principal.component.html
+++ b/audaces-test/src/app/home/principal/principal.component.html
@@ -35,7 +35,7 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div class="item">
+            <div class="item-add">
                 <button mat-fab color="primary" class="btn-plus" aria-label="Botão adicionar">+</button>
             </div>
         </section>
